--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,7 @@
 @import url("./header.css");
 @import url("./main.css");
 @import url("./premier.css");
+@import url("./recruit.css");
+@import url("./countries.css");
+@import url("./service.css");
+@import url("./ready.css");
