--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@
 }
 
 .main__text {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  position: relative;
   z-index: 6;
 }
 
@@ -44,6 +49,7 @@
   background: rgb(227, 11, 73);
   padding: 12px 24px;
   color: white;
+  z-index: 10;
 }
 .main__wave {
   position: absolute;
